2009-11-02  Sancho Lerena <slerena@artica.es>

	* include/config_process.php: Updated build/version.

	* pandora_console.spec: Updated to release 2; preparing the rc2.

	* godmode/agentes/module_manager.php: Fixed a small problem, don't allow
	to create network modules if not have the snmpconsole due a bad SQL. Fixed.

	* include/api.php: Removed ending line.

2009-10-30  Ramon Novoa  <rnovoa@artica.es>

	* operation/snmpconsole/snmp_view.php: Added a status filter. Fixed
	  deletion confirmation.

2009-10-30  Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_api.php: fix the tiny bug that not set the default
	separator in function "get_tree_agents".
	* godmode/reporting/reporting_builder.php: fix the bug that don't change the
	select box of module.
	Fixes: 2888988

2009-10-30  Miguel de Dios <miguel.dedios@artica.es>

	* DEBIAN/control, DEBIAN/md5sums, DEBIAN/postinst, DEBIAN/prerm,
	DEBIAN/conffiles: sorry, I had the permissions to directory DEBIAN not
	"755" and in the previus commit don't upload.

2009-10-29  Miguel de Dios  <miguel.dedios@artica.es>

	* DEBIAN/postinst: add the same message as RPM in the finish installation.

2009-10-29  Miguel de Dios  <miguel.dedios@artica.es>

	* DEBIAN/control, DEBIAN/md5sums, DEBIAN/postinst: debian base files for
	to make a .deb package.
	* make_deb_package.sh: shell script for make automatically the debs packages
	for standard installation in a Debian Lenny, this script make two packages
	"pandorafms.console_3.0.0.rc1.deb" and "php-xml-rpc_1.5.2-1_all.deb" the
	rest of packages dependencies is in official Debian repositories.
	
2009-10-27  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_api.php: extend the funcionality "returnError".

2009-10-27  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_api.php: add in the function "isInACL" the posibility
	to no filter if set in ACL the character "*".

2009-10-26  Ramon Novoa  <rnovoa@artica.es>

	* extensions/update_manager.php,